samples/_failures_safe/1761798536_7281b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_090740a4.c: In function ‘main’:
./samples/SAFE/__tmp_090740a4.c:144:16: error: missing terminating " character
  144 |         printf("
      |                ^
./samples/SAFE/__tmp_090740a4.c:144:9: error: expected expression at end of input
  144 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_090740a4.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_090740a4.c:144:9: error: expected declaration or statement at end of input
